[package]
name = "network-framework"
description = "Rust bindings for Network.framework on Apple platforms."
version = "0.1.0"
edition = "2021"
authors = ["Triss Healy <th@trissyle.gs"]
build = "build.rs"
# repository = "https://github.com/ryanmcgrath/cacao"
categories = ["os::macos-apis", "os::ios-apis", "api-bindings", "asynchronous", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = "0.1.6"
core-foundation = { version = "0.9", features = ["with-chrono", "mac_os_10_8_features"] }
dispatch = "0.2.0"
libc = "0.2"
objc = "0.2.7"
objc_id = "0.1.1"
os_info = "3.0.1"
uuid = { version = "0.8", features = ["v4"], optional = true }
url = "2.1.1"
security-framework = "2"

[dev-dependencies]
bindgen = "0.60"
